FIX: slowed projView dropdown times to accomodate heavier rendering, was causing jumps.

--- a/styles/projectView/projectMain.css
+++ b/styles/projectView/projectMain.css
@@ -15,7 +15,7 @@
   box-shadow: 
     0.25em 0.25em 0em rgb(221, 221, 221),
     0 -3.5em 0em rgba(255,255,255,0.4);
-  transition: transform 0.5s ease;
+  transition: transform 1.5s ease;
   z-index: 10;
 }
 
